--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -23,10 +23,12 @@
 
   <style>
 
-    /*
-      misc styles, nothing to do with CSS variables
-    */
+    :root{
 
+      --base:#ffc600;
+      --spacing:10px;
+      --blur:10px;  
+    }
     body {
       text-align: center;
       background: #193549;
@@ -46,6 +48,23 @@
   </style>
 
   <script>
+
+    const inputs = document.querySelectorAll('.controls input');
+
+    function handesUpdate(){
+
+      //sizing value assign or nothing
+      const suffix = this.dataset.sizing || '';
+      document.documentElement.style.setProperty(`--${this.name}`,this.value+suffix);
+    }
+
+      
+
+    inputs.forEach(inputs=>inputs.addEventListener('change',handesUpdate));
+    inputs.forEach(inputs=>inputs.addEventListener('mousemove',handesUpdate));
+
+
+
   </script>
 
 </body>
